added changes to layout

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <!-----------------------------hero--------------------------------->
     <main class="main">
         <section class="main__hero">
-            <div class="main__hero--item">
 
 
-                <img src="./assets/images/hero-bio.jpg" alt="flowers" class="main__hero--image">
 
-                <h3 class="main__hero--title">
-                    The Bees Knees
-                </h3>
+            <img src="./assets/images/hero-bio.jpg" alt="flowers" class="main__hero--image">
 
-            </div>
+            <h3 class="main__hero--title">
+                The Bees Knees
+            </h3>
+
+
         </section>
 
         <article class="main__first">
@@ -127,15 +127,15 @@
                 <form id="myForm" action="" class="form__right" method="post">
 
                     <div class="form__label">
-                        <label for="name" class="form__label"> NAME</label><br>
+                        <label for="name" class="form__label"> NAME</label>
                         <input id="name" type="text" name="userName" placeholder="Enter your name"
-                            class="form__name--item"><br>
+                            class="form__name--item">
                     </div>
 
                     <div class="form__textarea">
-                        <label for="userComment" class="form__label"> COMMENT</label> <br>
-                        <textarea id="userComment" name="userComment" type="text"
-                            class="form__textarea--item">Add a new comment</textarea>
+                        <label for="userComment" class="form__label"> COMMENT</label>
+                        <textarea id="userComment" name="userComment" type="text" class="form__textarea--item"
+                            placeholder="Enter your comment"></textarea>
                     </div>
 
                     <div class="form__button">
