--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </a>
         <nav class="header__navigation">
             <ul class="header__menu">
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link active" href="#">Biography</a>
+                <li class="header__menu-item active">
+                    <a class="header__menu-item--link" href="#">Biography</a>
                 </li>
                 <li class="header__menu-item">
                     <a class="header__menu-item--link" href="./pages/shows.html">Shows</a>
