add style changes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </a>
         <nav class="header__navigation">
             <ul class="header__menu">
-                <li class="header__menu-item active">
-                    <a class="header__menu-item--link" href="#">Biography</a>
+                <li class="header__menu-item">
+                    <a class="header__menu-item--link active" href="#">Biography</a>
                 </li>
                 <li class="header__menu-item">
                     <a class="header__menu-item--link" href="./pages/shows.html">Shows</a>
@@ -34,6 +34,7 @@
 
 
     <!-----------------------------main--------------------------------->
+    <!-----------------------------hero--------------------------------->
     <!-----------------------------hero--------------------------------->
     <main class="main">
         <section class="main__hero">
@@ -48,6 +49,7 @@
 
 
         </section>
+
 
         <article class="main__first">
 
@@ -145,8 +147,6 @@
 
             </div>
             <section class="section">
-
-            </section>
 
         </article>
 
