--- a/pages/shows.html
+++ b/pages/shows.html
@@ -62,6 +62,10 @@
 
     </main>
 
+
+
+
+    <section class="section"></section>
     <!----------------------------- footer--------------------------------->
 
 
