fixed navigation bar

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <img src="./assets/logos/Logo-bandsite.svg">
             </span>
         </a>
-        <nav class="header__navigation">
+        <nav id="nav" class="header__navigation" role="navigation">
             <ul class="header__menu">
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link active" href="#">Biography</a>
+                <li class="active-mobile">
+                    <a href="./index.html" class="header__menu-item active">Biography</a>
                 </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link" href="./pages/shows.html">Shows</a>
+                <li>
+                    <a href="./pages/shows.html" class="header__menu-item">Shows</a>
                 </li>
             </ul>
         </nav>
@@ -97,7 +97,7 @@
 
         <section class="main__section">
 
-            <h class="main__section--title"> Photo Gallery</h>
+            <h class="main__section-title"> Photo Gallery</h>
             <!-----------------------------gallery section--------------------------------->
 
             <section class="main__gallery center">
@@ -120,7 +120,7 @@
         </section>
 
         <article class="main__form">
-            <h class="main__form--header">Join the Conversation</h>
+            <h class="main__form-header">Join the Conversation</h>
             <div class="form">
                 <div class="form__left">
                     <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img">
