--- a/pages/shows.html
+++ b/pages/shows.html
@@ -16,16 +16,16 @@
     <header class="header">
         <a href="../index.html" class="header__logo-name">
             <span class="header__logo-name">
-                <img src="../assets/logos/Logo-bandsite.svg" alt="logo-bandsite">
+                <img src="../assets/logos/Logo-bandsite.svg">
             </span>
         </a>
-        <nav class="header__navigation">
+        <nav id="nav" class="header__navigation" role="navigation">
             <ul class="header__menu">
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link" href="../index.html">Biography</a>
+                <li>
+                    <a href="../index.html" class="header__menu-item">Biography</a>
                 </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link active" href="./shows.html">Shows</a>
+                <li class="active-mobile">
+                    <a href="./shows.html" class="header__menu-item active">Shows</a>
                 </li>
             </ul>
         </nav>
