fixed cover image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-            <img src="./assets/images/hero-bio.jpg" alt="flowers" class="main__hero--image">
+            <img src="./assets/images/hero-bio.jpg" alt="flowers" class="main__hero--image" />
 
             <h3 class="main__hero--title">
                 The Bees Knees
