--- a/pages/shows.html
+++ b/pages/shows.html
@@ -37,21 +37,18 @@
             <img src="../assets/images/hero-shows.jpg" alt="show" class="main__hero--image">
 
             <h3 class="main__hero--header"> Beautiful Beasts Album</h3>
-            <p class="main__hero--content"> Queen of Yellow x <br> For The Strings</p>
+
+            <p class="main__hero--content"> Queen of Yellow x For The Strings</p>
 
             <div class="main__hero--player">
-                <iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay"
+                <iframe width="70%" height="100" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/334733635&color=%238a6c80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
                     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                    <a href="https://soundcloud.com/danny-delgado-music" title="Danny Delgado" target="_blank"
-                        style="color: #cccccc; text-decoration: none;">Danny Delgado</a> · <a
-                        href="https://soundcloud.com/danny-delgado-music/imagine-dragons-thunder-danny-delgado-remix"
-                        title="Imagine Dragons - Thunder (Danny Delgado Remix)" target="_blank"
-                        style="color: #cccccc; text-decoration: none;">Imagine Dragons - Thunder (Danny Delgado
-                        Remix)</a>
+
                 </div>
             </div>
+
         </section>
         <h class="main__show">Shows</h>
 
