--- a/pages/shows.html
+++ b/pages/shows.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/bio.css">
     <link rel="stylesheet" href="../styles/shows.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>BandSite</title>
 </head>
 
@@ -14,15 +15,17 @@
     <!-----------------------------header--------------------------------->
     <header class="header">
         <a href="../index.html" class="header__logo-name">
-            <span class="header__logo-name">BANDSITE</span>
+            <span class="header__logo-name">
+                <img src="../assets/logos/Logo-bandsite.svg">
+            </span>
         </a>
-        <nav class="header__navigation">
+        <nav id="nav" class="header__navigation" role="navigation">
             <ul class="header__menu">
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link" href="../index.html">Biography</a>
+                <li>
+                    <a href="../index.html" class="header__menu-item">Biography</a>
                 </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-item--link active" href="./shows.html">Shows</a>
+                <li class="active-mobile">
+                    <a href="./shows.html" class="header__menu-item active">Shows</a>
                 </li>
             </ul>
         </nav>
@@ -34,21 +37,18 @@
             <img src="../assets/images/hero-shows.jpg" alt="show" class="main__hero--image">
 
             <h3 class="main__hero--header"> Beautiful Beasts Album</h3>
-            <p class="main__hero--content"> Queen of Yellow x <br> For The Strings</p>
+
+            <p class="main__hero--content"> Queen of Yellow x For The Strings</p>
 
             <div class="main__hero--player">
-
-                <iframe height="140" width="100%" scrolling="no" frameborder="no" allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/509639583&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                <iframe width="70%" height="100" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/334733635&color=%238a6c80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
                     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                    <a href="https://soundcloud.com/momomoyouth" title="MØ" target="_blank"
-                        style="color: #cccccc; text-decoration: none;">MØ</a> · <a
-                        href="https://soundcloud.com/momomoyouth/blur" title="Blur" target="_blank"
-                        style="color: #cccccc; text-decoration: none;">Blur</a>
-                </div>
 
+                </div>
             </div>
+
         </section>
         <h class="main__show">Shows</h>
 
@@ -59,6 +59,10 @@
 
     </main>
 
+
+
+
+    <section class="section"></section>
     <!----------------------------- footer--------------------------------->
 
 
@@ -99,7 +103,9 @@
         </div>
 
         <div class="footer__fifth">
-            <h class="footer__fifth--title">BANDSITE</h>
+            <a class="footer__fifth--title" href="../index.html">
+                <img src="../assets/logos/Logo-bandsite.svg" alt="logo-bandsite">
+            </a>
             <div class="footer__fifth--content">
                 <p> Copyright The Bees Knees &#169 2021 All Rights Reserved </p>
             </div>
