--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
 
             <section class="main__gallery center">
                 <div class="row">
-                    <img src="./assets/images/Photo-gallery-1.jpg" alt="concert" class="main-gallery__image">
-                    <img src="./assets/images/Photo-gallery-2.jpg" alt="concert" class="main-gallery__image">
-                    <img src="./assets/images/Photo-gallery-3.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph1.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph2.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph3.jpg" alt="concert" class="main-gallery__image">
                 </div>
                 <div class="row">
-                    <img src="./assets/images/Photo-gallery-4.jpg" alt="concert" class="main-gallery__image">
-                    <img src="./assets/images/Photo-gallery-5.jpg" alt="concert" class="main-gallery__image">
-                    <img src="./assets/images/Photo-gallery-6.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph4.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph5.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph6.jpg" alt="concert" class="main-gallery__image">
                 </div>
                 <div class="row">
-                    <img src="./assets/images/Photo-gallery-7.jpg" alt="concert" class="main-gallery__image">
-                    <img src="./assets/images/Photo-gallery-8.jpg" alt="concert" class="main-gallery__image">
-                    <img src="./assets/images/Photo-gallery-9.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph7.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph8.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/ph9.jpg" alt="concert" class="main-gallery__image">
                 </div>
             </section>
         </section>
