--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/bio.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <title>BandSite</title>
+    <title>The Gym</title>
 </head>
 
 <body>
@@ -23,10 +23,10 @@
         <nav id="nav" class="header__navigation" role="navigation">
             <ul class="header__menu">
                 <li class="active-mobile">
-                    <a href="./index.html" class="header__menu-item active">Biography</a>
+                    <a href="./index.html" class="header__menu-item active">About</a>
                 </li>
                 <li>
-                    <a href="./pages/shows.html" class="header__menu-item">Shows</a>
+                    <a href="./pages/shows.html" class="header__menu-item">Live Workouts</a>
                 </li>
             </ul>
         </nav>
@@ -41,10 +41,10 @@
 
 
 
-            <img src="./assets/images/hero-bio.jpg" alt="flowers" class="main__hero--image" />
+            <img src="./assets/images/main-hero.jpg" alt="gym" class="main__hero--image" />
 
             <h3 class="main__hero--title">
-                The Bees Knees
+                The Gym
             </h3>
 
 
@@ -54,40 +54,52 @@
         <article class="main__first">
 
             <!-----------------------------main part--------------------------------->
-            <h3 class="main__first--title"> About the Musicians</h3>
+            <h3 class="main__first--title"> About us</h3>
             <div class="center">
-                <img src="./assets/images/band.jpg" alt="band" class="main__first--img">
+                <img src="./assets/images/about.jpg" alt="band" class="main__first--img">
             </div>
-            <p class="main__first--content"> "We push each other to be the best. It’s not uncommon for one of us to
-                say ‘this needs to be better, back to the
-                drawing board’"
-            <p class="main__first--author"> - Bryan Teddy, lead vocalist of The Bees Knees</p>
+            <p class="main__first--content"> "Someday your hardest workout will be your warmup."
+            <p class="main__first--author"> - Bryan Teddy, head coach</p>
 
         </article>
         <!-----------------------------main second--------------------------------->
 
         <article class="main__second">
-            <h3 class="main__second--header"> The Bees Knees</h3>
-            <p class="main__second--content">The Bees Knees is a pop rock band originating from San Francisco,
-                California. The band consists of lead
-                vocalist Bryan
-                Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer.
-                The band
-                achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams.
-                Having worked with
-                other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the
-                band could
-                succeed even further, pushing them to sign with Magenta Records.
+            <h3 class="main__second--header"> Fitness for your well-being</h3>
+            <p class="main__second--content">Fitness is an essential aspect of maintaining a healthy lifestyle. Regular
+                exercise can help prevent chronic diseases,
+                improve mental health and mood, and increase overall well-being. The gym is one of the best places to
+                achieve all of
+                these benefits.
 
-                From there, the band has soared, gaining international recognition and ranking in the top 10 on the
-                Poster Charts. New
-                fans immediately fell in love with the band’s original and organic attitude, solidifying their place as
-                one of the
-                hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The
-                Hive” and are
-                drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The
-                Bees Knees are
-                currently recording their second studio album, looking to be released in late 2021.</p>
+                A gym typically offers a wide range of equipment and classes for all fitness levels, from cardio
+                machines and
+                weightlifting equipment to yoga and group fitness classes. Many gyms also offer personal training and
+                nutrition
+                counseling to help individuals reach their fitness goals.
+
+                One of the biggest advantages of going to the gym is the opportunity to work with a variety of
+                equipment. Cardiovascular
+                exercise machines such as treadmills, ellipticals, and stationary bikes can help improve cardiovascular
+                health and burn
+                calories. Weightlifting equipment such as free weights and weight machines can help build muscle and
+                improve strength.
+
+                Another advantage of going to the gym is the opportunity to take group fitness classes. Classes such as
+                yoga, Pilates,
+                and spinning can provide a fun and social way to stay active. They can also be a great way to try new
+                forms of exercise
+                and find something that you enjoy.
+
+                In addition to the physical benefits, regular exercise can also have a positive impact on mental health
+                and mood.
+                Exercise has been shown to reduce symptoms of depression and anxiety, and can also improve self-esteem
+                and overall
+                well-being.
+
+                However, it is important to remember that the most important thing is consistency. While starting a
+                workout routine can
+                be difficult, it is important to set realistic goals and stick to them.</p>
 
         </article>
 
@@ -120,7 +132,7 @@
         </section>
 
         <article class="main__form">
-            <h class="main__form-header">Join the Conversation</h>
+            <h class="main__form-header">Share your experience</h>
             <div class="form">
                 <div class="form__left">
                     <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img">
@@ -172,13 +184,13 @@
         </div>
 
         <div class="footer__second">
-            <h class="footer__second--title bold">Cam Adams <br>The Bees Knees Management </h>
+            <h class="footer__second--title bold">Cam Adams <br>The Gym Management </h>
             <p class="footer__second--content"> 503 Broadway Penthouse,<br> New York, NY 10012, USA </p>
             <p class="footer__second--content">info@thebeesknees.com</p>
         </div>
 
         <div class="footer__third">
-            <h class="footer__third--title bold"> Pearl Gregg <br>Limitless Artist Group</h>
+            <h class="footer__third--title bold"> Pearl Gregg <br>Marketing Group</h>
             <br>
             <p class="footer__third--content"> Booking Agent <br> for US / South America / Japan</p>
             <p class="footer__third--content"> pearl.gregg@limitlessag.com</p>
@@ -196,7 +208,7 @@
                 <img src="./assets/logos/Logo-bandsite.svg">
             </a>
             <div class="footer__fifth--content">
-                <p>Copyright The Bees Knees <span>&#169</span>2021 All Rights Reserved </p>
+                <p>Copyright The Gym <span>&#169</span>2021 All Rights Reserved </p>
             </div>
         </div>
 
