--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <a href="./index.html" class="header__logo-name">
             <span class="header__logo-name">
-                <img src="./assets/logos/Logo-bandsite.svg">
+                <h3>The Gym </h3>
             </span>
         </a>
         <nav id="nav" class="header__navigation" role="navigation">
@@ -26,7 +26,7 @@
                     <a href="./index.html" class="header__menu-item active">About</a>
                 </li>
                 <li>
-                    <a href="./pages/shows.html" class="header__menu-item">Live Workouts</a>
+                    <a href="./pages/shows.html" class="header__menu-item ">Live Workouts</a>
                 </li>
             </ul>
         </nav>
@@ -44,8 +44,10 @@
             <img src="./assets/images/main-hero.jpg" alt="gym" class="main__hero--image" />
 
             <h3 class="main__hero--title">
-                The Gym
+                Exercise not only changes your body. It changes your mind, attitude & mood.
+                Join The Gym.
             </h3>
+
 
 
         </section>
@@ -54,7 +56,7 @@
         <article class="main__first">
 
             <!-----------------------------main part--------------------------------->
-            <h3 class="main__first--title"> About us</h3>
+            <h3 class="main__first--title"> Live Workouts</h3>
             <div class="center">
                 <img src="./assets/images/about.jpg" alt="band" class="main__first--img">
             </div>
@@ -205,7 +207,9 @@
 
         <div class="footer__fifth">
             <a class="footer__fifth--title" href="../index.html">
-                <img src="./assets/logos/Logo-bandsite.svg">
+                <span class="header__logo-name">
+                    <h3>The Gym </h3>
+                </span>
             </a>
             <div class="footer__fifth--content">
                 <p>Copyright The Gym <span>&#169</span>2021 All Rights Reserved </p>
