--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/bio.css">
     <link rel="stylesheet" href="../styles/shows.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>BandSite</title>
+    <title>The Gym</title>
 </head>
 
 <body>
@@ -16,16 +16,16 @@
     <header class="header">
         <a href="../index.html" class="header__logo-name">
             <span class="header__logo-name">
-                <img src="../assets/logos/Logo-bandsite.svg">
+                <h3>The Gym </h3>
             </span>
         </a>
         <nav id="nav" class="header__navigation" role="navigation">
             <ul class="header__menu">
-                <li>
-                    <a href="../index.html" class="header__menu-item">Biography</a>
-                </li>
                 <li class="active-mobile">
-                    <a href="./shows.html" class="header__menu-item active">Shows</a>
+                    <a href="../index.html" class="header__menu-item">About</a>
+                </li>
+                <li>
+                    <a href="./shows.html" class="header__menu-item active">Live Workouts</a>
                 </li>
             </ul>
         </nav>
@@ -34,14 +34,14 @@
     <!-----------------------------hero--------------------------------->
     <main class="main">
         <section class="main__hero">
-            <img src="../assets/images/hero-shows.jpg" alt="show" class="main__hero--image">
+            <!-- <img src="../assets/images/about.jpg" alt="show" class="main__hero--image"> -->
 
-            <h3 class="main__hero--header"> Beautiful Beasts Album</h3>
+            <h3 class="main__hero--header"> The Gym</h3>
 
-            <p class="main__hero--content"> Queen of Yellow x For The Strings</p>
+            <p class="main__hero--content"> Music for your first workout</p>
 
             <div class="main__hero--player">
-                <iframe width="70%" height="100" scrolling="no" frameborder="no" allow="autoplay"
+                <iframe width="50%" height="80" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/334733635&color=%238a6c80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
                     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
@@ -50,7 +50,7 @@
             </div>
 
         </section>
-        <h class="main__show">Shows</h>
+        <h class="main__show">Workouts</h>
 
         <section class="section"></section>
 
@@ -71,25 +71,25 @@
             <h3 class="footer__first--title">Get in Touch</h3>
             <div class="footer__first--icons">
                 <a target="_blank" href="https://www.instagram.com/">
-                    <img src="../assets/icons/Icon-instagram.svg" class="social" alt="Icon-instagram">
+                    <img src="../assets/icons/Icon-instagram.svg" class="social" alt="social">
                 </a>
                 <a target="_blank" href="https://facebook.com/">
-                    <img src="../assets/icons/Icon-facebook.svg" class="social" alt="Icon-facebook">
+                    <img src="../assets/icons/Icon-facebook.svg" class="social" alt="social">
                 </a>
-                <a target="_blank" href="hhtp://twitter.com">
-                    <img src="../assets/icons/Icon-twitter.svg" alt="icon-twitter" class="social">
+                <a target="_blank" href="http://twitter.com">
+                    <img src="../assets/icons/Icon-twitter.svg" class="social" alt="social">
                 </a>
             </div>
         </div>
 
         <div class="footer__second">
-            <h class="footer__second--title bold">Cam Adams <br>The Bees Knees Management </h>
+            <h class="footer__second--title bold">Cam Adams <br>The Gym Management </h>
             <p class="footer__second--content"> 503 Broadway Penthouse,<br> New York, NY 10012, USA </p>
             <p class="footer__second--content">info@thebeesknees.com</p>
         </div>
 
         <div class="footer__third">
-            <h class="footer__third--title bold"> Pearl Gregg <br>Limitless Artist Group</h>
+            <h class="footer__third--title bold"> Pearl Gregg <br>Marketing Group</h>
             <br>
             <p class="footer__third--content"> Booking Agent <br> for US / South America / Japan</p>
             <p class="footer__third--content"> pearl.gregg@limitlessag.com</p>
@@ -104,10 +104,12 @@
 
         <div class="footer__fifth">
             <a class="footer__fifth--title" href="../index.html">
-                <img src="../assets/logos/Logo-bandsite.svg" alt="logo-bandsite">
+                <span class="header__logo-name">
+                    <h3>The Gym </h3>
+                </span>
             </a>
             <div class="footer__fifth--content">
-                <p> Copyright The Bees Knees &#169 2021 All Rights Reserved </p>
+                <p>Copyright The Gym <span>&#169</span>2021 All Rights Reserved </p>
             </div>
         </div>
 
