fixed problem with hero

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-            <img src="./assets/images/main-hero.jpg" alt="gym" class="main__hero--image" />
+            <!-- <img src="./assets/images/main-hero.jpg" alt="gym" class="main__hero--image" /> -->
 
             <h3 class="main__hero--title">
                 Exercise not only changes your body. It changes your mind, attitude & mood.
@@ -58,7 +58,7 @@
             <!-----------------------------main part--------------------------------->
             <h3 class="main__first--title"> Live Workouts</h3>
             <div class="center">
-                <img src="./assets/images/about.jpg" alt="band" class="main__first--img">
+                <img src="./assets/images/about.jpg" alt="workout" class="main__first--img">
             </div>
             <p class="main__first--content"> "Someday your hardest workout will be your warmup."
             <p class="main__first--author"> - Bryan Teddy, head coach</p>
