--- a/pages/shows.html
+++ b/pages/shows.html
@@ -21,10 +21,10 @@
         </a>
         <nav id="nav" class="header__navigation" role="navigation">
             <ul class="header__menu">
-                <li class="active-mobile">
+                <li>
                     <a href="../index.html" class="header__menu-item">About</a>
                 </li>
-                <li>
+                <li class="active-mobile">
                     <a href="./shows.html" class="header__menu-item active">Live Workouts</a>
                 </li>
             </ul>
@@ -34,28 +34,19 @@
     <!-----------------------------hero--------------------------------->
     <main class="main">
         <section class="main__hero">
-            <!-- <img src="../assets/images/about.jpg" alt="show" class="main__hero--image"> -->
-
-            <h3 class="main__hero--header"> The Gym</h3>
-
             <p class="main__hero--content"> Music for your first workout</p>
-
             <div class="main__hero--player">
-                <iframe width="50%" height="80" scrolling="no" frameborder="no" allow="autoplay"
+                <iframe width="400" height="80" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/334733635&color=%238a6c80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
                     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
 
                 </div>
             </div>
-
         </section>
         <h class="main__show">Workouts</h>
 
         <section class="section"></section>
-
-
-
 
     </main>
 
